--- a/python_docs_dark.user.css
+++ b/python_docs_dark.user.css
@@ -2,7 +2,7 @@
 @name           Python Docs - Dark Theme
 @namespace      https://github.com/maximilionus
 @homepageURL    https://github.com/maximilionus/python_docs_dark
-@updateURL      https://raw.githubusercontent.com/maximilionus/python_docs_dark/master/python_docs_dark.user.css
+@updateURL      https://github.com/maximilionus/python_docs_dark/raw/master/python_docs_dark.user.css
 @license        MIT
 @version        1.0.0
 @description    Dark theme for docs.python.org
