--- a/python_docs_dark.user.css
+++ b/python_docs_dark.user.css
@@ -4,7 +4,7 @@
 @homepageURL    https://github.com/maximilionus/python_docs_dark
 @updateURL      https://github.com/maximilionus/python_docs_dark/raw/master/python_docs_dark.user.css
 @license        MIT
-@version        1.0.0
+@version        1.0.1
 @description    Dark theme for docs.python.org
 @author         maximilionus <maximilionuss@gmail.com>
 ==/UserStyle== */
@@ -145,6 +145,10 @@
 
     code {
         background: var(--background-gray);
+    }
+
+    tt {
+        background-color: var(--background-gray)
     }
 
     .highlight .go {
