--- a/python_docs_dark.user.css
+++ b/python_docs_dark.user.css
@@ -15,8 +15,7 @@
         --background-gray: #303030;
         --text-normal: #b5b5b5;
         --text-light: #d9d9d9;
-        --text-code-general: #ddcbb4;
-        --text-code-red: #b71c56;
+        --text-code-general: #bfbfbf;
     }
 
     ::-webkit-scrollbar {
@@ -28,8 +27,29 @@
     }
 
     ::-webkit-scrollbar-thumb {
-        background: var(--background-gray);
+        background:  #424242;
         border-radius: 4px;
+    }
+
+    div#sidebarbutton {
+        color: #6d6d6d !important;
+        background-color: var(--background-light) !important;
+    }
+
+    div#sidebarbutton:hover {
+        color: #9b9b9b !important;
+        background-color: #535353 !important;
+    }
+
+    input, select {
+        color: var(--text-normal);
+        background-color: var(--background-light);
+        border: 1px solid #272727;
+    }
+
+    form.inline-search input,
+    div.sphinxsidebar input {
+        border: 1px solid #272727;
     }
 
     html,
@@ -39,7 +59,12 @@
     div.sphinxsidebar,
     div.warning,
     div.document {
-        background: var(--background-dark);
+        background-color: var(--background-dark);
+    }
+
+    div.topic {
+        border: 0px;
+        background-color: var(--background-gray);
     }
 
     div {
@@ -93,26 +118,20 @@
         border: 2px solid var(--background-gray);
     }
 
-    div.seealso {
-        background: var(--background-light)
+    div.seealso,
+    div.note,
+    th,
+    dl.field-list > dt {
+        background: var(--background-light);
     }
 
     div.body div.seealso {
         border: 2px solid var(--background-gray);
     }
 
-    div.note {
-        background: var(--background-light);
-    }
-
     span.pre {
         color: var(--text-code-general);
         background: var(--background-gray);
-    }
-
-    th,
-    dl.field-list > dt {
-        background: var(--background-light);
     }
 
     dt:target,
@@ -121,12 +140,10 @@
         background: var(--background-gray);
     }
 
-    table.docutils td {
-        background: var(--background-light);
-    }
-
+    table.docutils td,
     table.docutils th {
         background: var(--background-light);
+        border: 1px solid #5f5f5f !important;
     }
 
     code,
@@ -136,12 +153,16 @@
         background-color: var(--background-gray);
     }
 
+    .highlight .o {
+        color: #bfbfbf;
+    }
+
     .highlight .go {
         color: var(--text-light);
     }
 
     .highlight .nf {
-        color: var(--text-code-red);
+        color: #e83b7c;
     }
 
     .highlight .k {
@@ -172,11 +193,55 @@
         color: #6ed88c;
     }
 
+    .highlight .s {
+        color: #72a8de;
+    }
+
+    .highlight .s1 {
+        color: #59acff;
+    }
+
     .highlight .s2 {
         color: #a6d2ff;
     }
 
     .highlight .se {
         color: #f3a68f;
+    }
+
+    .highlight .sd {
+        color: #5b9de0;
+    }
+
+    .highlight .nt {
+        color: #e64a7d;
+    }
+
+    .highlight .mi {
+        color: #34c17b;
+    }
+
+    .highlight .mf {
+        color: #2cb772;
+    }
+
+    .highlight .ow {
+        color: #00b534;
+    }
+
+    .highlight .c1 {
+        color: #59b6ce;
+    }
+
+    .highlight .ne {
+        color: #77bf8b;
+    }
+
+    .highlight .cp {
+        color: #45ca6b;
+    }
+
+    .highlight .cpf {
+        color: #61c0d8;
     }
 }
