--- a/python_docs_dark.user.css
+++ b/python_docs_dark.user.css
@@ -27,7 +27,7 @@
     }
 
     ::-webkit-scrollbar-thumb {
-        background:  #424242;
+        background-color:  #424242;
         border-radius: 4px;
     }
 
@@ -69,7 +69,7 @@
 
     div {
         color: var(--text-normal);
-        background: var(--background-dark);
+        background-color: var(--background-dark);
     }
 
     p {
@@ -94,11 +94,11 @@
     }
 
     div.body {
-        background: inherit;
+        background-color: inherit;
     }
 
     div.sidebar {
-        background: var(--background-light);
+        background-color: var(--background-light);
         border: 2px solid var(--background-gray);
     }
 
@@ -109,12 +109,12 @@
     div.body h5,
     div.body h6 {
         color: var(--text-light);
-        background: var(--background-dark);
+        background-color: var(--background-dark);
     }
 
     div.body pre {
         color: var(--text-normal);
-        background: var(--background-light);
+        background-color: var(--background-light);
         border: 2px solid var(--background-gray);
     }
 
@@ -122,7 +122,7 @@
     div.note,
     th,
     dl.field-list > dt {
-        background: var(--background-light);
+        background-color: var(--background-light);
     }
 
     div.body div.seealso {
@@ -131,7 +131,7 @@
 
     span.pre {
         color: var(--text-code-general);
-        background: var(--background-gray);
+        background-color: var(--background-gray);
         border: 0.4px solid var(--background-gray);
         border-radius: 5px;
     }
@@ -142,15 +142,15 @@
     }
 
     span.highlighted {
-        color: #181818;
-        background-color: #fbe54e;
-        border: 2px solid #fbe54e;
-        border-radius: 10px;
+        color: #0f0f0f;
+        background-color:#fff08c;
+        border: 0.4px solid #fff08c;
+        border-radius: 5px;
     }
 
     table.docutils td,
     table.docutils th {
-        background: var(--background-light);
+        background-color: var(--background-light);
         border: 1px solid #5f5f5f !important;
     }
 
