Modified colors for new versions (wip), lic update

--- a/python_docs_dark.user.css
+++ b/python_docs_dark.user.css
@@ -4,7 +4,7 @@
 @homepageURL    https://github.com/maximilionus/python_docs_dark
 @updateURL      https://github.com/maximilionus/python_docs_dark/raw/master/python_docs_dark.user.css
 @license        MIT
-@version        2.1.1
+@version        2.2.0
 @description    Dark theme for docs.python.org
 @author         maximilionus <maximilionuss@gmail.com>
 ==/UserStyle== */
@@ -62,7 +62,8 @@
         background-color: var(--background-dark);
     }
 
-    div.topic {
+    div.topic,
+    .nav-content .search input[type=submit] {
         border: 0px;
         background-color: var(--background-gray);
     }
@@ -167,6 +168,20 @@
     .note code,
     .note tt {
         background-color: var(--background-gray);
+    }
+
+    .version_switcher_placeholder,
+    .language_switcher_placeholder,
+    .nav-content
+    {
+        background-color: var(--background-dark);
+        border: 2px solid var(--background-gray);
+        border-radius: 5px;
+    }
+
+    .language_switcher_placeholder select, .version_switcher_placeholder select {
+        background-color: var(--background-dark);
+        border: none;
     }
 
     .highlight .o {
