--- a/python_docs_dark.user.css
+++ b/python_docs_dark.user.css
@@ -4,7 +4,7 @@
 @homepageURL    https://github.com/maximilionus/python_docs_dark
 @updateURL      https://github.com/maximilionus/python_docs_dark/raw/master/python_docs_dark.user.css
 @license        MIT
-@version        2.2.0
+@version        2.2.1
 @description    Dark theme for docs.python.org
 @author         maximilionus <maximilionuss@gmail.com>
 ==/UserStyle== */
@@ -112,6 +112,7 @@
     }
 
     div.body {
+        color: var(--text-light);
         background-color: inherit;
     }
 
