Colors swap for py interpreter input-output sim

--- a/python_docs_dark.user.css
+++ b/python_docs_dark.user.css
@@ -207,6 +207,10 @@
     }
 
     .highlight .go {
+        color: var(--text-normal);
+    }
+
+    .highlight .n {
         color: var(--text-light);
     }
 
@@ -323,7 +327,7 @@
     }
 
     .highlight .gp {
-        color: #9ca5f5;
+        color: #8ac98a;
     }
 
     .highlight .na {
