Preview image update, `.user.css` descr changed

--- a/python_docs_dark.user.css
+++ b/python_docs_dark.user.css
@@ -5,7 +5,7 @@
 @updateURL      https://github.com/maximilionus/python_docs_dark/raw/master/python_docs_dark.user.css
 @license        MIT
 @version        2.2.1
-@description    Dark theme for docs.python.org
+@description    Dark theme for python documentation pages
 @author         maximilionus <maximilionuss@gmail.com>
 ==/UserStyle== */
 @-moz-document domain("docs.python.org"), domain("packaging.python.org") {
