--- a/python_docs_dark.user.css
+++ b/python_docs_dark.user.css
@@ -4,7 +4,7 @@
 @homepageURL    https://github.com/maximilionus/python_docs_dark
 @updateURL      https://github.com/maximilionus/python_docs_dark/raw/master/python_docs_dark.user.css
 @license        MIT
-@version        2.3.0
+@version        2.4.0
 @description    Dark theme for python documentation pages
 @author         maximilionus <maximilionuss@gmail.com>
 ==/UserStyle== */
@@ -48,6 +48,10 @@
         border-color: var(--background-dark);
     }
 
+    .warning code {
+        background-color: var(--background-dark);
+    }
+
     div#sidebarbutton {
         color: #6d6d6d !important;
         background-color: var(--background-light) !important;
@@ -62,6 +66,10 @@
         color: var(--text-normal);
         background-color: var(--background-light);
         border: 1px solid #272727;
+    }
+
+    input:focus {
+        outline: solid var(--text-normal) 2px;
     }
 
     form.inline-search input,
@@ -231,11 +239,15 @@
     }
 
     .highlight .nd {
-        color: #ffc4c4;
+        color: #ff8c77;
     }
 
     .highlight .k {
         color: #34b75a;
+    }
+
+    .highlight .kc {
+        color: #7ec27e;
     }
 
     .highlight .kt {
@@ -274,6 +286,10 @@
         color: #a6d2ff;
     }
 
+    .highlight .sa {
+        color: #f7ef77;
+    }
+
     .highlight .se {
         color: #f3a68f;
     }
@@ -282,8 +298,16 @@
         color: #5b9de0;
     }
 
+    .highlight .si {
+        color: #d66794;
+    }
+
     .highlight .nt {
         color: #e64a7d;
+    }
+
+    .highlight .m {
+        color: var(--text-light);
     }
 
     .highlight .mi {
@@ -327,14 +351,10 @@
     }
 
     .highlight .gp {
-        color: #8ac98a;
+        color: #8ac7c9;
     }
 
     .highlight .na {
         color: #508fce;
-    }
-
-    .warning code {
-        background-color: var(--background-dark);
     }
 }
